# ML_Based_Trading

./: .env.example  .gitignore  HANDOFF_PROMPT.md  README.md  pyproject.toml  requirements.txt
config/: universe.yaml  universe_sp500.yaml  universe_top100.yaml
data/cand_xgb_xs4/: metrics.json
data/cand_xs4_sp500/: feature_cols.json  metrics.json
data/cand_xs4_top100/: feature_cols.json  metrics.json
data/cand_xs4_v1/: feature_cols.json  metrics.json
data/thesis_tournament/: leaderboard.csv
docs/: MODEL_CARD.md  winner_summary.json
notebooks/: train_colab.ipynb
scripts/: iteration_runner.sh  pull_altdata.py  run_live.sh
src/mlbt/: __init__.py  __main__.py  alpha_tournament.py  beat_spy.py  candidate_eval.py  classical_walk_sweep.py  cli.py  eval_best.py  experiments.py  experiments_1h.py  experiments_daily.py  experiments_v2.py  experiments_xsec.py  hparam_sweep.py  live.py  mac_studio_tournament.py  multihorizon_ensemble.py  realism_audit.py  thesis_tournament.py  walk_stack_sweep.py  walk_train_daily.py  walk_validation.py  walk_validation_ml.py  winner_pkg.py
src/mlbt/backtest/: __init__.py  engine.py  portfolio.py
src/mlbt/core/: __init__.py  base.py  http.py  log.py  registry.py  secrets.py  storage.py  timegrid.py
src/mlbt/dashboard/: app.py
src/mlbt/features/: __init__.py  cross_asset.py  microstructure.py  regime.py  targets.py  technical.py  time_of_day.py
src/mlbt/ml/: __init__.py  coreml_export.py  dataset_torch.py  models.py  train.py  train_xgb.py  train_xl.py
src/mlbt/pipeline/: __init__.py  align.py  (+2 more)
tests/: test_smoke.py
(+31 files in other folders)
